# backend/api/helpers/base_name.py
@@ -34,3 +34,4 @@ SCORE = "score"
 ID_COMPANY = "id_company"
 SESSION = "session"
 TYPE = "type"
+ID_CONCERT = "id_concert"
