# backend/route/route_list.py
@@ -1,9 +1,11 @@
 from route.RouteService import Auth
 from route.RouteRegistration import Reg
 from route.RouteConcert import Concert
+from route.RouteFire import Fire
 
 ROUTES = {
     Auth: '/api/v1/auth',
     Reg: '/api/v1/reg',
     Concert: '/api/v1/concert',
+    Fire: '/api/v1/fire',
 }
